Name:                hfind
Version:             0.0.3
Description:         Find files in your file system
License:             BSD3
License-file:        LICENSE
Author:              James Sanders
Maintainer:          jimmyjazz14@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2

Library
     Build-Depends:     base >= 3 && < 5, 
                        unix >= 2.3.2.0, 
                        filepath >= 1.1.0.2, 
                        directory >= 1.0.0.3,
                        bytestring >= 0.9.1.5

     Exposed-modules:   System.Find

     ghc-options:       -O2